fix vertical alignment

--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,7 @@ code {
 
 .option-image {
   height: 25px;
-  width: 25px;
+  min-width: 25px;
   margin-right: 10px;
 }
 
